@@ -271,7 +271,7 @@ class OllamaClient {
         int code = response.code();
         String body = response.errorBody().string();
 
-        String errorMessage = String.format("status code: %s; body: %s", code, body);
+        String errorMessage = "status code: %s; body: %s".formatted(code, body);
         return new RuntimeException(errorMessage);
     }
 
