@@ -29,7 +29,7 @@ class GoogleSearchApiHttpRequestLoggingInterceptor implements HttpExecuteInterce
 
     private static String getHeaders(HttpHeaders headers) {
         return headers.entrySet().stream()
-                .map(entry -> String.format("[%s: %s]", entry.getKey(), entry.getValue())).collect(Collectors.joining(", "));
+                .map(entry -> "[%s: %s]".formatted(entry.getKey(), entry.getValue())).collect(Collectors.joining(", "));
     }
 
     private static String getBody(HttpContent content) {
